<resources>
    <string name="app_name">Following You</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_head">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="change_password">Сhange password</string>
    <string name="tap_to_log_in">Tap To Log In</string>
    <string name="tap_to_sing_up">Tap To Sing_Up</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="error_password_text">Password too short</string>
    <string name="error_email_text">Please input email</string>
    <string name="error_confirmPassword_text">Passwords have to match</string>

    <string name="ok">OK</string>
    <string name="News">News</string>
    <string name="Source">Source</string>
</resources>